syntax = "proto3";
package user;

import "google/api/annotations.proto";

service User {
  rpc Get(UserRequest) returns (UserResponse) {
    option (google.api.http) = {
      get: "/v1/user/{id}"
    };
  }
}

message UserRequest {
  int64 id = 1;
}

message UserResponse {
  int64 id = 1;
  string username = 2;
}
